Fixed Click Events on Tablets

--- a/src/GameBoard/GameBoard.css
+++ b/src/GameBoard/GameBoard.css
@@ -3,12 +3,14 @@
   display: flex;
   height: 100vh;
   width: 100%;
+  cursor: pointer;
 }
 .gameboard-target {
   background: green;
   display: flex;
   height: 100vh;
   width: 100%;
+  cursor: pointer;
 }
 
 .gameboard-board {
@@ -16,4 +18,5 @@
   display: flex;
   height: 100vh;
   width: 100%;
+  cursor: pointer;
 }
